fixed a furi parsing issue around query and trailing slash in a path. rewrote documentation code runner. Now all output is handled by mocking the console. This way, the doc output is always consistently looking like the console output (user experience). stubbed soc/timer which is timer interrupts on ESP32. more work on documentation highlight.js regex nesty-land.

--- a/docs/css/fhatos.css
+++ b/docs/css/fhatos.css
@@ -98,11 +98,19 @@ video {
     color: darkgreen;
 }
 
+.hljs-mmadt-bool,
 .hljs-mmadt-real,
 .hljs-mmadt-int {
     color: darkgoldenrod;
 }
+.hljs-string {
+    color: darkgoldenrod;
+    font-style: italic;
+}
 
+.hljs-mmadt-rec-key {
+    color: #1e54a0;
+}
 .hljs-mmadt-rec {
     color: darkmagenta;
 }
@@ -126,10 +134,7 @@ video {
     color: darkred;
 }
 
+.hljs-mmadt-uri,
 .hljs-mmadt-type {
     color: #1e54a0;
-}
-
-.hljs-string {
-    color: #9e7b35;
 }
