nice doc work. beefed up inspect() instruction.{

--- a/docs/css/fhatos.css
+++ b/docs/css/fhatos.css
@@ -141,6 +141,7 @@ video {
 /******************************************************************/
 
 .hljs {
+    font-size: 90%;
     display: block;
     overflow-x: auto;
     padding: 0.5em;
