tweaked the matrix embedding example in the docs. also tweaked the CSS around tables. added console.clear function so if the state of the console gets all wack (unclosed wrappers and too hard to figure out whats going on), the user can clear the inpuit buffer.

--- a/docs/css/fhatos.css
+++ b/docs/css/fhatos.css
@@ -36,6 +36,11 @@
     --black: #bfbfbf;
 }
 
+.red {
+    color: #ba3925;
+    font-weight: bold;
+}
+
 /* Text styles */
 html {
     font-family: Arial, sans-serif !important;
