--- a/docs/css/fhatos.css
+++ b/docs/css/fhatos.css
@@ -192,6 +192,10 @@ mark {
     background-color: #43454AFF !important;
 }
 
+.MathJax {
+    color: #d1dcdd !important;
+}
+
 /* Table styles */
 table {
     background-color: var(--maincolor);
@@ -275,16 +279,12 @@ video {
 
 #header .details,
 .hljs-mmadt-rec,
-.hljs-mmadt-keyword,
 .hljs-mmadt-form,
 .hljs-fhatos-prompt-begin {
     color: #b066cd;
 }
 
-.hljs-fhatos-prompt-end {
-    color: green;
-}
-
+.hljs-fhatos-prompt-end,
 .hljs-fhatos-result-prefix {
     color: green;
 }
@@ -297,12 +297,14 @@ video {
     color: #ba3925;
 }
 
+
 .hljs-mmadt-sugar-inst,
 .hljs-mmadt-inst-f-cpp,
 .hljs-fhatos-log-warn {
     color: #c2aa2f;
 }
 
+.hljs-mmadt-keyword,
 .hljs-mmadt-uri,
 .hljs-mmadt-type {
     color: #1c72ff;
