--- a/docs/css/fhatos.css
+++ b/docs/css/fhatos.css
@@ -174,6 +174,9 @@ code {
     border-style: solid;
     font-size: 0.9em !important;
     font-family: monospace, fixed !important;
+    /*width: 90%;
+    margin-left: auto;
+    margin-right: auto;*/
 }
 
 mark {
