a resturcturing of the mmADT language documentation. going to explain mmADT by way of decomposing the components of an obj.

--- a/docs/css/fhatos.css
+++ b/docs/css/fhatos.css
@@ -290,6 +290,11 @@ video {
     color: #d4de68;
 }
 
+.h {
+    color: #d4de68;
+    font-weight: bold !important;
+}
+
 .hljs-mmadt-str {
     color: #d4de68;
     font-style: italic;
