--- a/docs/css/fhatos.css
+++ b/docs/css/fhatos.css
@@ -279,6 +279,10 @@ video {
     }
 }
 
+.img-pad {
+    padding: 50px;
+}
+
 /******************************************************************/
 
 .hljs {
